--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "calebporzio/onboard",
+    "name": "dilneiss/onboard",
     "description": "Track onboarding steps for users when they get setup in your app.",
     "license": "MIT",
     "authors": [
